tests/semantic/invalid/variable_declaration_mismatch_type.c
/*
 * TODO find a way to trigger "buildMismatchTypeErrorMessage" 
 * with "if (!recordedSymbol->getType()->equals(primaryType))"
 */

char b[2];
int32_t a;
a = b;